--- a/core/templates/backend/carousel.html
+++ b/core/templates/backend/carousel.html
@@ -193,7 +193,8 @@ var csrftoken = getCookie('csrftoken');
                                             }
                                         });
 
-                                    }function edit(e) {
+                                    }
+                                    function edit(e) {
 
 
                                         NProgress.start();
