--- a/core/templates/web/course-guide.html
+++ b/core/templates/web/course-guide.html
@@ -11,7 +11,7 @@
 
 
 {% block content %}
-    <div class="wrapper-menu">
+    <div class="wrapper-menu carousel-margin">
         <div class="wrapper-son container-fluid">
             <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
                 <a href="#">
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <div class="course-header">
+    <div class="carousel-margin">
         <img  src="/static/images/web/courseheader.png">
     </div>
 
