--- a/core/templates/web/education.html
+++ b/core/templates/web/education.html
@@ -2,12 +2,283 @@
 
 
 {% block head %}
-
+    <script type="text/javascript">
+    $(document).ready(function () {
+        $('#abroad_education').prop('class', 'actived');
+    });
+    </script>
 {% endblock %}
 
 
 {% block content %}
-    <div>
+
+    <div class="wrapper-menu carousel-margin">
+        <div class="wrapper-son container-fluid">
+        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
+            <a href="#">
+                <span class="icon">
+                    <i class="icon-check"></i>
+                </span>
+                <p>ipad</p>
+            </a>
+        </div>
+        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
+            <a href="#">
+                <span class="icon">
+                    <i class="icon-book"></i>
+                </span>
+                <p>iphone</p>
+            </a>
+        </div>
+        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
+            <a href="#">
+                <span class="icon">
+                    <i class="icon-microphone"></i>
+                </span>
+                <p>iwatch</p>
+            </a>
+        </div>
+        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
+            <a href="#">
+                <span class="icon">
+                    <i class="icon-install"></i>
+                </span>
+                <p>itv</p>
+            </a>
+        </div>
+        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
+            <a href="#">
+                <span class="icon">
+                    <i class="icon-play"></i>
+                </span>
+                <p>icar</p>
+            </a>
+        </div>
+        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
+            <a href="#">
+                <span class="icon">
+                    <i class="icon-facebook"></i>
+                </span>
+                <p>iass</p>
+            </a>
+        </div>
+    </div>
+    </div>
+
+    <div class="course-header carousel-margin">
+        <img  src="/static/images/web/courseheader.png">
+    </div>
+
+    <div id="hxco-features-2">
+		<div class="hxco-container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center hxco-heading" id="ourservice">
+					<h3>高中留学不只是世界顶尖大学的门票，更是终生投资</h3>
+{#					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>#}
+				</div>
+			</div>
+            <!-- left side -->
+			<div class="row">
+                <div class="col-md-6">
+					<div class="hxco-video hxco-bg" style="background-image: url(../../static/images/img_1.jpg); ">
+{#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
+					</div>
+                    <div>
+                        <div style="text-align:left;">
+                            <img src="/static/images/web/left-top.png">
+                        </div>
+                        <div class="education-text ">
+                            <p>在什么情况下，</p>
+                            <p>你该考虑送孩子到美国留学？</p>
+                        </div>
+                        <div style="text-align:right">
+                            <img src="/static/images/web/right-down.png">
+                        </div>
+                    </div>
+				</div>
+				<div class="col-md-6">
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-check"></i>
+						</span>
+						<div class="feature-copy">
+							<h3>一,孩子具有特殊特长</h3>
+							<p>美国教育注重培养音乐，艺术和体育等特长，能为孩子提供国内不容易得到的较优质的资源和环境，以及支持。</p>
+						</div>
+					</div>
+
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-check"></i>
+						</span>
+						<div class="feature-copy">
+							<h3>二， 孩子不适应国内的教育体制</h3>
+							<p>有些孩子不适应国内的应试教育环境，来到美国求学然后轻松拿到哈佛的学士和硕士学位。</p>
+						</div>
+					</div>
+
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-check"></i>
+						</span>
+						<div class="feature-copy">
+							<h3>三， 孩子在国内的填鸭式教育体制中，得不到肯定。</h3>
+							<p>相对于受国内单一的价值观教育环境下比较成绩，美国的教育环境给予孩子更宽广的发展空间和多元选择。</p>
+						</div>
+					</div>
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-check"></i>
+						</span>
+						<div class="feature-copy">
+							<h3>四，孩子参加国内高考没有取得理想的成绩。</h3>
+							<p>相对于受国内单一的价值观教育环境下比较成绩，美国的教育环境给予孩子更宽广的发展空间和多元选择。</p>
+						</div>
+					</div>
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-check"></i>
+						</span>
+						<div class="feature-copy">
+							<h3>五，名人子女和企业交班人，在国内受教育压力大和受束缚。</h3>
+							<p>在美国可以享受更多的教育自由空间和扩展国际视野。许多名人及企业家都会趁早送孩子到美国读书。</p>
+						</div>
+					</div>
+				</div>
+            </div>
+            <div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center hxco-heading" id="ourservice" style="margin-top:2em;">
+					<h3>圆梦计划</h3>
+					<p>全程规划，申请录取，暑假夏令营，学校参观，VIP学生将享受私人订制，建立清晰的留学规划，学业规划和未来职业发展方向规划。成形后期，无障碍适应训练，学术私教指导，助你完美适应留学生活。 </p>
+				</div>
+			</div>
+            <div class="row" >
+
+                <div class="col-md-3 text-center">
+                    <div class="thumbnail">
+                        <img class="lazy" src="/static/images/web/img_bg_2.jpg" alt="...." >
+                        <div class="caption">
+                          <h3>
+                            VIP申请尊享计划
+                          </h3>
+                          <p>
+                          高中/本科/研究生转学直升全程服务，涵盖一对一标准化辅导，个性化成长规划，软实力挖掘提升。
+                          </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 text-center">
+                    <div class="thumbnail">
+                        <img class="lazy" src="/static/images/test1.png" alt="...." >
+                        <div class="caption">
+                          <h3>
+                            学校参观
+                          </h3>
+                          <p>
+                          打造专属你的名校探访行程，提前感受美国大学文化。由名盛老师全程陪同，家长沟通无障碍。
+                          </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 text-center">
+                    <div class="thumbnail">
+                        <img class="lazy" src="/static/images/test1.png" alt="...." >
+                        <div class="caption">
+                          <h3>
+                            夏令营
+                          </h3>
+                          <p>
+                          美国本土私人定制暑假夏令营，自由入营时间，全英文教学，专属老师全程陪伴，妥善住宿安排。
+                          </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 text-center">
+                    <div class="thumbnail">
+                        <img class="lazy" src="/static/images/test1.png" alt="...." >
+                        <div class="caption">
+                          <h3>
+                            留学无障碍沟通
+                          </h3>
+                          <p>
+                          入学学习生活适应技巧指导，后期到校探访以及学习报告，专业心理导师沟通，提供解压处方。
+                          </p>
+                        </div>
+                    </div>
+                </div>
+{#                <div class="col-md-3">#}
+{#                    <div class="education-dream-block">#}
+{#                        <img class="img-responsive dream-img" src="/static/images/test1.png">#}
+{#                        <h4 class="dream-h4" >夏令营</h4>#}
+{#                        <p>美国本土私人定制暑假夏令营，自由入营时间，全英文教学，专属老师全程陪伴，妥善住宿安排。</p>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-md-3">#}
+{#                    <div class="education-dream-block">#}
+{#                        <img class="img-responsive dream-img" src="/static/images/test1.png">#}
+{#                        <h4 class="dream-h4 " >学校参观</h4>#}
+{#                        <p>打造专属你的名校探访行程，提前感受美国大学文化。由名盛老师全程陪同，家长沟通无障碍。</p>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-md-3">#}
+{#                    <div class="education-dream-block">#}
+{#                        <img class="img-responsive dream-img" src="/static/images/test1.png">#}
+{#                        <h4 class="dream-h4" >留学无障碍沟通</h4>#}
+{#                        <p>入学学习生活适应技巧指导，后期到校探访以及学习报告，专业心理导师沟通，提供解压处方。</p>#}
+{#                    </div>#}
+{#                </div>#}
+            </div>
+        </div>
+    </div>
+
+    <div class="fourstep">
+        <div class="fourstep-div">
+            <p>长远学业规划</p>
+        </div>
+        <div class="fourstep-div">
+            <p>及时多方沟通 </p>
+        </div>
+        <div class="fourstep-div">
+            <p>完美方案实施 </p>
+        </div>
+        <div class="fourstep-div">
+            <p>全面咨询向导</p>
+        </div>
+    </div>
+    <div id="hxco-features-2" style="">
+		<div class="hxco-container">
+            <!-- left side -->
+            <div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center hxco-heading" id="ourservice" style="margin-top:2em;">
+					<h3>项目简介-高中申请服务包 -一体式服务</h3>
+					<p>名盛登陆计划应低龄留学生群体的实际需求，帮助每个小留学生制订适应自身发展需求的长远的从留学到就业的规划，并提供从生活到学术的针对个体的介入辅导和咨询服务。
+                        我们具体的服务内容包括选校申请咨询，申请材料准备，申请文书美化，面试模拟与辅导，生活辅导，学业辅导等</p>
+				</div>
+                <div class="col-md-6 text-center">
+                    <div class="thumbnail">
+                        <img class="lazy" src="/static/images/web/img_bg_2.jpg" alt="...." >
+                        <div class="caption">
+                          <p>
+                            针对具有一定英语基础，良好家庭经济条件的有意来美念高中的中国学生，名盛登陆计划为申请者提供个性化的申请服务：依学生个人条件，意愿结合我们基于大数据分析得出的建议来完成选校和申请方案的制订以及实施。必要时提供背景提升和标准化考试辅导的服务。确保人人有理想offer。
+                          </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 text-center">
+                    <div class="thumbnail">
+                        <img class="lazy" src="/static/images/web/img_bg_2.jpg" alt="...." >
+                        <div class="caption">
+                          <p>
+                          对目前学校不满意或因种种原因被开除取消学籍的学生，名盛登陆计划为申请者提供个性化的转学服务：为学生当下的学术困境指点迷津，并依照学生目前的状况制订转学以及身份应急方案。必要时提供签证辅导和生活辅导的服务。确保学生可以转入理想的高中。
+                          </p>
+                        </div>
+                    </div>
+                </div>
+			</div>
+        </div>
+    </div>
+
+    <div id="hxco-features-2" >
 
     </div>
 {% endblock %}
