--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -42,7 +42,7 @@
 
 {% endblock %}
 {% block content %}
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="margin-top:120px;">
+    <div id="carousel-example-generic" class="carousel slide carousel-margin" data-ride="carousel">
           <!-- Indicators -->
           <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -170,7 +170,6 @@
 							<p>浩哥sb. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 						</div>
 					</div>
-
 				</div>
                 <!-- right side -->
                 <div class="col-md-6">
@@ -220,7 +219,7 @@
 			<div class="row">
 				<div class="display-t">
 					<div class="display-tc">
-						<div class="col-md-2 col-sm-6 animate-box">
+						<div class="col-md-2 col-sm-6">
 							<div class="feature-center">
 								<span class="icon">
 									<i class="icon-eye"></i>
